    &#8226; Better feedback for when you retweet or favorite a status<br/>
    &#8226; Much better support for auto-trimming the databases<br/>
    &#8226; Added size 30 font<br/>
    &#8226; Mark direct messages and mentions as read when the notification is dismissed<br/>
    &#8226; Better handling of retweets when viewing the tweet<br/>
    &#8226; Reply to your own tweets<br/>
    &#8226; View your current account on the talon pull notification if you have more than one<br/>
    &#8226; Workaround under advanced settings for if your timeline jumped down a spot after a refresh<br/>
    &#8226; Better stability<br/>
    &#8226; Tons of bug fixes<br/>
    &#8226; Updated translations<br/>
<br/><br/>

<b>Version 1.2.0 Beta 3:</b><br/><br/>
    &#8226; More saving position on timeline<br/>
    &#8226; Fix for 24 hour clock<br/>
    &#8226; Fixed refresh on startup<br/>
    &#8226; Pull to refresh on search<br/>
    &#8226; Pull to refresh on lists<br/>
    &#8226; Issues with direct message and mentions notifications replaying<br/>
<br/><br/>

<b>Version 1.20 Beta 2:</b><br/><br/>
    &#8226; Real URL's on profiles<br/>
    &#8226; Fixed 7 in tablet mode<br/>
    &#8226; Custom notification sound<br/>
    &#8226; Huge cleanup of settings<br/>
    &#8226; See user's location when viewing a tweet (if it is provided)<br/>
    &#8226; Changed the way that composing is done in-line. Now opens the compose window. Sorry but this is the way it will have to work.<br/>
    &#8226; Attempted some fixes for uploading large images<br/>
    &#8226; More jumping fixes on the timeline<br/>
    &#8226; Updated all the translations<br/>
<br/><br/>

<b>Version 1.20 Beta 1:</b><br/><br/>
    &#8226; Color option for custom themes<br/>
    &#8226; In-line twitpic pictures<br/>
    &#8226; In-line imgur pictures<br/>
    &#8226; No more jumping on the timeline<br/>
    &#8226; 7 in tablet layout also used in landscape on phones<br/>
    &#8226; Roboto Condensed font option<br/>