@@ -482,5 +482,7 @@
     <string name="favoriting_status">Favoriting Status</string>
     <string name="jumping_workaround">Jumping Workaround</string>
     <string name="jumping_workaround_summary">Enable this if your timeline jumps down one spot after you refresh your feed.</string>
+    <string name="menu_share_link">Share Link</string>
+    <string name="no_links">No Links</string>
 
 </resources>
